ref: remove usage of ddi in core and update test